# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  sources.list
config/: base.yaml
migrations/: 20250212080007_create_subscription_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/config/: local.yaml
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
