[package]
name = "zero"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
config = "0.15"
once_cell = "1.20.3"
reqwest = "0.12.12"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"], default-features = false }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.13.1", features = ["v4"] }
