[package]
name = "zero"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zero"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.97"
chrono = "0.4.39"
claims = "0.8.0"
config = "0.15"
fake = "4.0.0"
once_cell = "1.20.3"
rand = "0.9.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"], default-features = false }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.13.1", features = ["v4"] }
validator = "0.20.0"

[dev-dependencies]
claim = "0.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
quicktest = "1.0.7"
reqwest = "0.12.12"
